# MegariunProject

./: CMakeLists.txt
include/: App.h  Canvas.h  Globals.h  MegariunProject.h  Window.h
src/: MegariunProject.cpp  MegariunProject.h
src/app/: Globals.cpp  Window.cpp
src/gfx/: Shader.cpp
